# ACC-LCSH-check

./: .gitignore  README.md  backstage_deletes.py  dev-requirements.txt  monthly_lcsh_check.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: monthly-check.yaml  monthly-run.yaml  monthly-run.yml  unit-tests.yaml
acc_lcsh_check/: backstage_utils.py  checker.py  lcsh.py  log.py  sheet.py
data/: acc_20240405.csv  acc_in_20240411.csv  acc_in_20241015.csv  acc_original.csv  acc_terms.txt  backstage_out.csv  test_file.csv
tests/: conftest.py  test_backstage_utils.py  test_checker.py  test_lcsh.py  test_log.py
tests/data/: test_in.csv
