[tool.poetry]
name = "acc-lcsh-check"
version = "0.1.0"
description = "LCSH checker for ACC terms"
authors = ["Charlotte Kostelic <charlottekostelic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
types-requests = "^2.31.0.20240311"
pymarc = "^5.1.2"
google-api-python-client = "^2.126.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.1.240316"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
