[project]
name = "acc-lcsh-check"
version = "0.1.0"
description = "LCSH checker for ACC terms"
authors = [{name = "Charlotte Kostelic",email = "charlottekostelic@bookops.org"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32)",
    "types-requests (>=2.31)",
    "pymarc (>=5.1)",
    "google-api-python-client (>=2.146)",
    "google-auth-oauthlib (>=1.2)",
    "pandas (>=2.2)",
    "pandas-stubs (>=2.2.1.240316)"
]
license = "MIT"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]
omit = [
    "tests/*",
    "backstage_deletes.py",
    "monthly_lcsh_check.py"
]

[tool.mypy]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
