[project]
name = "acc-lcsh-check"
version = "0.1.0"
description = "LCSH checker for ACC terms"
authors = [{name = "Charlotte Kostelic",email = "charlottekostelic@bookops.org"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34)",
    "types-requests (>=2.33.0.20260518)",
    "pymarc (>=5.3.1)",
    "google-api-python-client (>=2.196)",
    "google-auth-oauthlib (>=1.4)",
    "pandas (>=3.0)",
    "pandas-stubs (>=3.0.0.260204)"
]
license = "MIT"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]
omit = [
    "tests/*",
    "backstage_deletes.py",
    "monthly_lcsh_check.py"
]

[tool.mypy]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
